recursion.lessons.recursion.koch.Koch.scala.error
Koch:3: error: not found: value snowSide
    snowSide(levels, length);
    ^Koch:6: error: not found: value snowSide
    snowSide(levels, length);
    ^Koch:9: error: not found: value snowSide
    snowSide(levels, length);
    ^